[gd_scene load_steps=2 format=3 uid="uid://cq0tw86if3h4t"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_d55t3"]

[node name="PauseMenu" type="Node2D"]
process_mode = 3
script = ExtResource("1_d55t3")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1173.0
offset_bottom = 521.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Weiter"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Optionen"

[node name="Exit Level" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Level Verlassen"

[node name="Quit Game" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Spiel Beenden >:("

[connection signal="pressed" from="MarginContainer/VBoxContainer2/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Exit Level" to="." method="_on_exit_level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Quit Game" to="." method="_on_quit_game_pressed"]
